--- a/exercises/04_recreate_extend.qmd
+++ b/exercises/04_recreate_extend.qmd
@@ -13,7 +13,18 @@ In this section, your challenge is to work with your small group to recreate the
 ```{r}
 # Your code here!
 
+library(REDCapR)
 
+creds <- retrieve_credential_local("../data-private/credentials.csv", 1)
+
+uri <- creds$redcap_uri
+token <- creds$token
+
+redcart <- read_redcap(uri, token)
+
+redcart |>
+  extract_tibble("demographics") |>
+  select(infseq_id, demo_last_name, demo_birth_date)
 ```
 
 ## Extend
